# kdev-krazy2

./: .gitattributes  .kde-ci.yml  CMakeLists.txt  Design.xmi  HACKING  Messages.sh  analysisjob.cpp  analysisjob.h  analysisparameters.cpp  analysisparameters.h  analysisprogressparser.cpp  analysisprogressparser.h  analysisresults.cpp  analysisresults.h  analysisresultsparser.cpp  analysisresultsparser.h  checker.cpp  checker.h  checkerlistjob.cpp  checkerlistjob.h  checkerlistparser.cpp  checkerlistparser.h  checkermodel.cpp  checkermodel.h  common.cpp  common.h  issue.cpp  issue.h  issuemodel.cpp  issuemodel.h  issuewidget.cpp  issuewidget.h  kdevkrazy2.desktop  kdevkrazy2.json  kdevkrazy2.rc  krazy2defaults.h  krazy2dialog.cpp  krazy2dialog.h  krazy2plugin.cpp  krazy2plugin.h  (+14 more)
cmake/: FindKrazy2.cmake
po/ar/: kdevkrazy2.po
po/bs/: kdevkrazy2.po
po/ca/: kdevkrazy2.po
po/ca@valencia/: kdevkrazy2.po
po/cs/: kdevkrazy2.po
po/de/: kdevkrazy2.po
po/en_GB/: kdevkrazy2.po
po/eo/: kdevkrazy2.po
po/es/: kdevkrazy2.po
po/et/: kdevkrazy2.po
po/eu/: kdevkrazy2.po
po/fi/: kdevkrazy2.po
po/fr/: kdevkrazy2.po
po/ga/: kdevkrazy2.po
po/gl/: kdevkrazy2.po
po/he/: kdevkrazy2.po
po/hu/: kdevkrazy2.po
po/it/: kdevkrazy2.po
po/ja/: kdevkrazy2.po
po/ka/: kdevkrazy2.po
po/ko/: kdevkrazy2.po
po/lt/: kdevkrazy2.po
po/mr/: kdevkrazy2.po
po/nl/: kdevkrazy2.po
po/nn/: kdevkrazy2.po
po/pl/: kdevkrazy2.po
po/pt/: kdevkrazy2.po
po/pt_BR/: kdevkrazy2.po
po/ru/: kdevkrazy2.po
po/sk/: kdevkrazy2.po
po/sl/: kdevkrazy2.po
po/sv/: kdevkrazy2.po
po/tr/: kdevkrazy2.po
po/ug/: kdevkrazy2.po
po/uk/: kdevkrazy2.po
po/zh_CN/: kdevkrazy2.po
po/zh_TW/: kdevkrazy2.po
settings/: CMakeLists.txt  kcm_kdev_krazy2settings.desktop  krazy2config.kcfg  krazy2config.kcfgc  krazy2preferences.cpp  krazy2preferences.h  krazy2projectsettings.cpp  krazy2projectsettings.h  krazy2settings.ui  selectcheckerswidget.cpp  selectcheckerswidget.h  selectcheckerswidget.ui  selectpathswidget.cpp  selectpathswidget.h
tests/: CMakeLists.txt  analysisjobtest.cpp  analysisparameterstest.cpp  analysisprogressparsertest.cpp  analysisresultsparsertest.cpp  analysisresultstest.cpp  checkerlistjobtest.cpp  checkerlistparsertest.cpp  checkermodeltest.cpp  checkertest.cpp  issuemodeltest.cpp  issuetest.cpp  issuewidgettest.cpp  krazy2viewtest.cpp  progressparsertest.cpp  resultparsertest.cpp  runMemcheck.py  selectcheckerswidgettest.cpp  selectpathswidgettest.cpp  sortedissuesproxymodeltest.cpp
tests/examples/: .singleIssueHiddenUnixFileName.cpp  severalIssuesSeveralCheckers.cpp  severalIssuesSingleChecker.cpp  singleExtraIssue.cpp
tests/examples/subdirectory/: severalIssuesSeveralCheckers.qml  singleIssue.desktop  singleIssue.desktop.example.do-not-translate
